2021-05-14  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.optex): new definition for new format.
	Move some other definitions around for consistency, but no changes.

2021-05-07  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (save_size): re-increase to 200000
	with parallel change to tex.ch.

2021-04-22  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi (TeX directory structure): link to
	ctan.org/pkg/tds instead of http://mirror.ctan.org.

2021-04-17  Karl Berry  <karl@tug.org>

	* version.ac: now 6.3.4/dev since TL'21 is released.

2021-04-07  Akira Kakuto  <kakuto@w32tex.org>

	* knj.c, readable.c: Fix a bug that the "nul" device given in
	a full-path form, such as c:/usr/work/nul was not readable.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-18  Karl Berry  <karl@tug.org>

	* texmf.cnf (save_size): reset to 80000 since that is what
	sup_save_size is set to in tex.ch. Found by Christian Schenk,
	tex-live 18 Mar 2021 18:39:04.

2021-03-08  Karl Berry  <karl@freefriends.org>

	* tests/cnfline/texmf.cnf (maxpr.lt-kpsewhich): set this,
	for --enable-shared builds.
	https://tug.org/pipermail/tex-k/2021-March/003490.html
	* tests/cnfline.test: unset maxpr othervar, just in case
	they are set in the environment. Maybe unset on an unset variable
	is portable enough nowadays?

2021-02-17  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi,
	* version.ac (kpse_dev): no /dev for 6.3.3.
	* NEWS,
	* doc/kpathsea.texi,
	* kpsewhich.c,
	* texmf.cnf: copyright 2021.

2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* knj.[ch]: Add new functions win32_fprintf(), win32_perror().
	(Windows only)

2020-10-24  Akira Kakuto  <kakuto@w32tex.org>

	* readable.c, knj.c: More than one adjacent directory
	separators in filename+2 should not exist in \\?\ form of
	absolute path.

2020-08-26  Karl Berry  <karl@tug.org>

	* texmf.cnf (save_size): double to 200,000. Needed with
	long documents, tex4ht, and l3regex. Hopefully no harm in increasing.